# remote-date

./: .env.example  .gitignore  Makefile  docker-compose.yml
back-rs/: .env.example  Cargo.toml
back-rs/src/: lib.rs  main.rs
back-rs/src/auth/: dto.rs  extractor.rs  mod.rs  models.rs  mongo.rs  service.rs
back-rs/src/config/: mod.rs
back-rs/src/email/: mod.rs
back-rs/src/http/: auth.rs  mod.rs  rooms.rs  routes.rs  social.rs  soundcloud.rs  youtube.rs
back-rs/src/rooms/: mod.rs  models.rs  mongo.rs  persist.rs  service.rs
back-rs/src/social/: mod.rs  models.rs  mongo.rs  service.rs
back-rs/src/soundcloud/: service.rs
back-rs/src/ws/: mod.rs
back-rs/src/youtube/: service.rs
front/: .env.example  index.html
front/src/: style.css
front/src/app/: index.vue
front/src/app/layout/: AuthLayout.vue  default.vue
front/src/app/routes/: router.ts
front/src/entities/room/: index.ts
front/src/entities/user/: index.ts
front/src/features/direct-message/: index.ts
front/src/features/friends/: index.ts
front/src/features/profile/: index.ts
front/src/features/room-chat/: index.ts
front/src/features/room-hub/: index.ts
front/src/features/room-player/: index.ts
front/src/features/room-share/: index.ts
front/src/pages/: index.ts
front/src/pages/friends/: FriendsPage.vue
front/src/pages/home/: HomePage.vue
front/src/pages/room/: RoomPage.vue  (+1 more)
front/src/widgets/: index.ts
rn/: .env.example  App.tsx  app.json  package-lock.json  package.json
rn/plugins/: with-android-ndk.js
rn/scripts/: open-android-expo.sh
todo/: smtp-setup.md
(+172 files in other folders)
