[package]
name = "back-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros", "ws"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
bcrypt = "0.16.0"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
anyhow = "1.0.93"
chrono = { version = "0.4.39", features = ["serde", "clock"] }
regex = "1.11.1"
fastrand = "2.3.0"
futures = "0.3.31"
once_cell = "1.20.2"
tower-http = { version = "0.6", features = ["cors"] }
mongodb = "3.2.3"
